# ALFRED

./: .dockerignore  .gitignore  <path_to_file>  Dockerfile  README.md  REVERT.md  command_log.txt  commit_revert.md  config.py  main.py  pyproject.toml  requirements-api.txt  requirements.txt  reverted_changes.txt
.github/workflows/: ci.yml
api/: auth.py  models.py  run.py  server.py
core/: brain.py  listener.py  memory.py  personality.py  voice.py
data/embeddings_db/: chroma.sqlite3
docs/superpowers/specs/: 2026-04-26-alfred-gui-refinement-design.md
memory/: __init__.py  database.py  memory_manager.py
service_commands/: calendar_commands.py  file_assistant_commands.py  memory_commands.py  system_monitor_commands.py  weather_commands.py
services/: automation.py  calendar_service.py  embeddings_manager.py  file_assistant.py  system_monitor.py  weather_service.py
tests/: __init__.py  conftest.py  test_api.py  test_brain.py  test_database.py  test_memory.py  test_services.py  test_ui_widgets.py
ui/: __init__.py  app.py  gui.py  gui_tkinter_backup.py  main_window.py  signals.py  system_overlay.py  utils.py
ui/styles/: __init__.py  colors.py  dark_theme.py
ui/threads/: __init__.py  audio_thread.py  command_worker.py  system_monitor_thread.py
ui/widgets/: __init__.py  chat_widget.py  date_separator.py  gradient_bar.py  input_bar.py  input_zone.py  quick_actions.py  settings_panel.py  sidebar.py  status_bar.py  system_dashboard.py  title_bar.py  waveform_widget.py
utils/: __init__.py  logger.py
