[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfred-assistant"
version = "1.0.0"
description = "A.L.F.R.E.D — All Knowing Logical Facilitator for Reasoned Execution of Duties"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "James"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0,<3.0.0",
    "pyttsx3>=2.90,<3.0.0",
    "SpeechRecognition>=3.10.0,<4.0.0",
    "pyaudio>=0.2.13,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "elevenlabs>=1.0.0,<2.0.0",
    "google-api-python-client>=2.100.0,<3.0.0",
    "google-auth-httplib2>=0.2.0,<1.0.0",
    "google-auth-oauthlib>=1.1.0,<2.0.0",
    "dateparser>=1.2.0,<2.0.0",
    "psutil>=5.9.0,<7.0.0",
    "supabase>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "markdown>=3.5.0,<4.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "PySide6>=6.5.0,<7.0.0",
    "pyqtgraph>=0.13.0,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "memory*", "services*", "service_commands*", "api*", "ui*", "utils*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
